--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
       "plan": "heroku-postgresql:hobby-dev"
     },
     {
+      "plan": "heroku-redis:hobby-dev"
+    },
+    {
       "plan": "herokuconnect:demo"
     }
   ],
