--- a/app.json
+++ b/app.json
@@ -8,9 +8,7 @@
     }
   },
   "addons": [
-    {
-      "plan": "papertrail:Chokrad"
-    },
+    "papertrail",
     {
       "plan": "heroku-postgresql:hobby-dev"
     },
